<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menuSettings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_notes"
        android:orderInCategory="100"
        android:title="@string/menuNotebook"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_task_time"
        android:orderInCategory="100"
        android:title="@string/menuTaskTime"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_deliver"
        android:orderInCategory="100"
        android:title="@string/menuDeliver"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_payment"
        android:orderInCategory="100"
        android:title="@string/menuPayment"
        app:showAsAction="never" />

</menu>